--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Test assignment for Rocket Business",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "start": "npx parcel index.html",
+    "build": "npx parcel build index.html"
   },
   "dependencies": {
     "inputmask": "^5.0.8"
