--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "1.0.0",
   "description": "Test assignment for Rocket Business",
   "scripts": {
-    "start": "npx parcel index.html",
-    "build": "npx parcel build index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "dependencies": {
-    "inputmask": "^5.0.8"
-  },
-  "devDependencies": {
-    "@parcel/transformer-sass": "^2.15.0",
+    "inputmask": "^5.0.8",
     "parcel": "^2.9.3",
+    "@parcel/transformer-sass": "^2.15.0",
     "sass": "^1.69.5"
   }
 }
