--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
+  "buildCommand": "npm install -g parcel && npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": null
